Bug 71549 - Conditional formatting loss due to apostrophe (') in sheet name
Summary: Conditional formatting loss due to apostrophe (') in sheet name
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.0.4 release
Hardware: x86 (IA32) Windows (All)
: medium major
Assignee: Markus Mohrhard
URL:
Whiteboard: target:4.2.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-11-12 20:04 UTC by pierre-marc.lavoie
Modified: 2013-11-17 18:37 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Test file (12.46 KB, application/vnd.oasis.opendocument.spreadsheet)
2013-11-12 20:04 UTC, pierre-marc.lavoie
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pierre-marc.lavoie 2013-11-12 20:04:16 UTC
Created attachment 89105 [details]
Test file

I'm experiencing Conditionnal formatting loss after saving my document.  I have traced the cause to my sheet name.

How to reproduce :
-Open Test.ods
-Rename "sheet1" with the string provided in the spreadsheet
-Save document
-Close docuement
-Open document, conditionnal formatting have disapeared.

I cannot change the sheet name in this document because this sheet is linked in over a hundred other documents.



Additionnal informations : 
Current Version :
Version: 4.1.3.2
Build ID: 70feb7d99726f064edab4605a8ab840c50ec57a

Sheet name was not a probleme in 3.5.7.2.
Comment 1 pierre-marc.lavoie 2013-11-13 17:54:19 UTC
(Bug summary modified)
After further testing on my side, it seems the issue is not due to length but to the apostrophe character in my sheet name.  

How to reproduce : 
Perform the same step as previous comment but rename Sheet1 to Sheet'1
Comment 2 tommy27 2013-11-14 06:17:12 UTC
reproduced under Win7 64bit with all versions from 4.1.3 back to 3.6.0

works in 3.5.7 hence regression

I add Calc expert to CC list
Comment 3 Commit Notification 2013-11-17 18:37:07 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a268ed682753e63f085ef81e242bb12516245593

use the correct formula grammar for export, fdo#71549



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.