use the correct formula grammar for export, fdo#71549

Change-Id: I50af1a394aa40c1a7dbc32caa2ace4a4552ac594